--- a/style.css
+++ b/style.css
@@ -11,14 +11,16 @@ body {
 #fantasyForm {
     text-align: center;
     background-color: rgb(65, 125, 204);
-    margin: 90px;
-    padding: 20px;
+    margin: 100px;
+    padding: 90px;
+    border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-*,
-::after,
-::before {
+
+*, ::after, ::before {
     box-sizing: content-box;
  } 
+
 .btn-light {
     margin-top: 20px;
     padding: 10px 20px;
